src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Enquiry_Role__c</fullName>
        <description>used by service console user</description>
        <label>Enquiry Role</label>
        <picklist>
            <picklistValues>
                <fullName>Phone &amp; Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to Face &amp; Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Set</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>used to enable selective search from case transfer custom component remoting action, and ensures only active users returned as a result</description>
        <formula>IF( IsActive ,
FirstName &amp; &quot; &quot; &amp; LastName,
&quot;xyz1234abc9876&quot;)</formula>
        <label>Full Name String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lastname_Initial__c</fullName>
        <description>for use in signature panel</description>
        <formula>LEFT(LastName ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lastname Initial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>used by my location component for service console</description>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Berwick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caulfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clayton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gippsland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peninsula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Set</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>My_Information_LastUpdate__c</fullName>
        <description>last time this information updated</description>
        <label>My Information LastUpdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Id__c</fullName>
        <description>used to map data from old system</description>
        <externalId>true</externalId>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>used by service console</description>
        <label>Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Current Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Set</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for MonTRACK functionality, SSA is a Student Success Advisor.</description>
        <label>SSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSO_AgentId__c</fullName>
        <label>SSO_AgentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSO_Extension__c</fullName>
        <label>SSO_Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSO_Pwd__c</fullName>
        <label>SSO_Pwd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SingleSignOn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SingleSignOn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>MGE_Users1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>MGE Base Profile</value>
        </filters>
        <label>MGE Users</label>
        <sharedTo>
            <group>Sys_Admin</group>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>